--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,8 @@
   <a href="/blog/">Blog</a>
 
   <body>
-    <h1>My Astro Site - Dev</h1>
+    <h1>My Astro Learning Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 
 
