--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
 
   <a href="/">Home</a>
@@ -16,7 +16,7 @@
   <a href="/blog/">Blog</a>
 
   <body>
-    <h1>My Astro Site - Dev</h1>
+    <h1>{pageTitle} - Dev</h1>
   </body>
 
 
