--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -31,12 +35,10 @@ const goal = 3;
     <title>{pageTitle}</title>
   </head>
 
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Header />
 
   <body>
-    <h1>{pageTitle}</h1>
+    <h1 class="text-7xl text-purple-500">{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
     <p>
@@ -66,7 +68,7 @@ const goal = 3;
     </ul>
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="font-bold text-green-600">{skill}</li>)}
     </ul>
     {happy && <p>I am happy to be learning Astro!</p>}
 
@@ -79,7 +81,9 @@ const goal = 3;
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
-
-
 </html>
