--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
 const pageTitle = "Home Page";
 ---
 
@@ -11,13 +15,13 @@ const pageTitle = "Home Page";
     <title>{pageTitle}</title>
   </head>
 
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Header />
 
   <body>
     <h1>{pageTitle} - Dev</h1>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
-
-
 </html>
